# lead_scoring_projet3

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  activate.sh  pyproject.toml
deployment/: deploy.yml  load_balancer.yml
docs/source/: conf.py
src/application/: server.py  train.py
src/coverage/: coverage.txt
src/domain/: features_eng.py  lead.py  model.pkl
src/infrastructure/: cleaning.py  connect_db.py
src/infrastructure/config/: config.py
src/settings/: base.py  column_names.py
src/test/unit/application/: test_train.py
src/test/unit/domain/: test_features_eng.py  test_lead.py
src/test/unit/infrastructure/: test_cleaning.py
