[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Dorota Bailly <dorota.bailly@gmail.com>, Jerome Blin <blinjrm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
numpy = "^1.19.5"
pandas = "^1.2.0"
uvicorn = "^0.13.3"
scikit-learn = "^0.24.0"
category-encoders = "^2.2.2"
DateTime = "^4.3"
requests = "^2.25.1"
pytest = "^6.2.1"
coverage = "^5.3.1"
pytest-cov = "^2.10.1"
SQLAlchemy = "^1.3.22"
pg8000 = "=1.13.2"
psycopg2-binary = "^2.8.6"
PyYAML = "^5.3.1"
Sphinx = "^3.4.3"
sphinxcontrib-napoleon = "^0.7"
m2r2 = "^0.2.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.black]
line_length = 100
